Documentação api - finalizando
