# backend/routes/Projeto.js
@@ -14,15 +14,20 @@ router.route('/')
 
     /*
             #swagger.tags = ['Projeto']
-            #swagger.description = 'Endpoint para encontrar os projetos.'
-            #swagger.parameters['projetos'] = {
-                in: 'body',
-                type: "object",
-                description: "Array de objetos contendo todos os projetos do site",
-                schema: {$ref: "#/definitions/Projetos"}
-            } 
-        
-            #swagger.responses[200] = { 
+            #swagger.description = 'Endpoint para encontrar os projetos.' 
+    */
+          
+  try{
+    const projetobd = await Projetos.find({});
+    res.statusCode = 200;
+    res.setHeader('Content-Type', 'application/json');
+    res.json(projetobd);
+  }catch(err){
+    err = {};
+    res.statusCode = 404;
+    res.json(err);
+  }
+    /*  #swagger.responses[200] = { 
                 schema: { $ref: "#/definitions/Projetos" },
                 description: 'Projeto encontrado.' 
             } 
@@ -35,32 +40,25 @@ router.route('/')
             #swagger.responses[500] = { 
                 description: 'Server ou banco fora do ar.' 
             } 
-        */
-  try{
-    const projetobd = await Projetos.find({});
-    res.statusCode = 200;
-    res.setHeader('Content-Type', 'application/json');
-    res.json(projetobd);
-  }catch(err){
-    err = {};
-    res.statusCode = 404;
-    res.json(err);
-  }
+    */
   
 })
 
 .post(authenticate.verifyUser,(req, res, next) => {
 
-  /*
+    /*
             #swagger.tags = ['Projetos']
             #swagger.description = 'Endpoint para criar um novo projeto.'
-            #swagger.parameters['projetos'] = {
-                in: 'body',
-                type: "object",
-                description: "Objeto contendo as informações do projeto a serem registradas",
-                schema: {$ref: "#/definitions/Projeto"}
-            } 
-        
+    */
+  Projetos.create(req.body)
+  .then((projetobd) => {
+      res.statusCode = 200;
+      res.setHeader('Content-Type', 'application/json');
+      res.json(projetobd);
+  }, (err) => next(err))
+  .catch((err) => next(err));
+
+    /*
             #swagger.responses[200] = { 
                 description: 'Projeto criado.' 
             } 
@@ -72,44 +70,19 @@ router.route('/')
             } 
         */
 
-  Projetos.create(req.body)
-  .then((projetobd) => {
-      res.statusCode = 200;
-      res.setHeader('Content-Type', 'application/json');
-      res.json(projetobd);
-  }, (err) => next(err))
-  .catch((err) => next(err));
 })
 
 
 router.route('/:id')
 .get((req, res, next) => {
 
-  /*
+    /*
             #swagger.tags = ['Projetos']
             #swagger.description = 'Endpoint que encontra um projeto através de seu id.'
             #swagger.parameters['id'] = { description: 'ID do projeto.' }
-            #swagger.parameters['res'] = {
-                in: 'body',
-                type: "object",
-                description: "Objeto contendo as informações do projeto em questão",
-                schema: {$ref: "#/definitions/Projeto"}
-            } 
+    */           
             
-            #swagger.responses[200] = { 
-                schema: { $ref: "#/definitions/Projeto" },
-                description: 'Projeto existe e é encontrado.' 
-            } 
-            #swagger.responses[401] = { 
-                description: ' Acesso não autorizado, necessário fazer login' 
-            },
-            #swagger.responses[404] = { 
-                description: 'Projeto não encontrado' 
-            },
-            #swagger.responses[500] = { 
-                description: 'Server ou banco fora do ar.' 
-            } 
-        */
+
   
   Projetos.findById(req.params.id)
     .then((resp) => {
@@ -118,7 +91,21 @@ router.route('/:id')
         res.json(resp);
     }, (err) => next(err))
     .catch((err) => next(err));
-
+/*
+    #swagger.responses[200] = { 
+        schema: { $ref: "#/definitions/Projeto" },
+        description: 'Projeto existe e é encontrado.' 
+    } 
+    #swagger.responses[401] = { 
+        description: ' Acesso não autorizado, necessário fazer login' 
+    },
+    #swagger.responses[404] = { 
+        description: 'Projeto não encontrado' 
+    },
+    #swagger.responses[500] = { 
+        description: 'Server ou banco fora do ar.' 
+    } 
+*/
 })
 .put(authenticate.verifyUser,(req, res, next) => {
 
@@ -126,12 +113,19 @@ router.route('/:id')
             #swagger.tags = ['Projeto']
             #swagger.description = 'Endpoint para encontrar e atualizar um projeto através do id.'
             #swagger.parameters['id'] = { description: 'ID do projeto.' }
-            #swagger.parameters['body'] = {
-                in: 'body',
-                type: "object",
-                description: "Objeto contendo as informações do projeto editado",
-                schema: {$ref: "#/definitions/Projeto"}
-                }
+    */
+  
+  Projetos.findByIdAndUpdate(req.params.id, {
+    $set: req.body
+  }, { new: true })
+  .then((projeto) => {
+      res.statusCode = 200;
+      res.setHeader('Content-Type', 'application/json');
+      res.json(projeto);
+  }, (err) => next(err))
+  .catch((err) => next(err));
+
+  /*
             #swagger.responses[200] = {
                 schema: { $ref: "#/definitions/Projeto" },
                 description: 'Projeto foi editado.'
@@ -145,18 +139,7 @@ router.route('/:id')
             #swagger.responses[500] = {
                 description: 'Server ou banco fora do ar.'
                 }
-        */
-  
-  Projetos.findByIdAndUpdate(req.params.id, {
-    $set: req.body
-  }, { new: true })
-  .then((projeto) => {
-      res.statusCode = 200;
-      res.setHeader('Content-Type', 'application/json');
-      res.json(projeto);
-  }, (err) => next(err))
-  .catch((err) => next(err));
-
+    */
 })
 .delete(authenticate.verifyUser,(req, res, next) => {
 
@@ -164,7 +147,17 @@ router.route('/:id')
             #swagger.tags = ['Projeto']
             #swagger.description = 'Endpoint para encontrar e excluir um projeto através do id.'
             #swagger.parameters['id'] = { description: 'ID do projeto' }
-            #swagger.responses[200] = { 
+    */
+
+  Projetos.findByIdAndRemove(req.params.id)
+    .then((resp) => {
+        res.statusCode = 200;
+        res.setHeader('Content-Type', 'application/json');
+        res.json(req.params.id);
+    }, (err) => next(err))
+    .catch((err) => next(err));
+    
+    /*#swagger.responses[200] = { 
                 description: 'Projeto apagado' 
             } 
             #swagger.responses[401] = { 
@@ -177,14 +170,6 @@ router.route('/:id')
                 description: 'Server ou banco fora do ar.' 
             } 
         */
-
-  Projetos.findByIdAndRemove(req.params.id)
-    .then((resp) => {
-        res.statusCode = 200;
-        res.setHeader('Content-Type', 'application/json');
-        res.json(req.params.id);
-    }, (err) => next(err))
-    .catch((err) => next(err));
 
 })
 
