# backend/routes/users.js
@@ -9,7 +9,6 @@ var authenticate = require('../authenticate');
 
 const Usuario = require('../models/users');
 var nome;
-//ver isso aqui 
 
 router.use(bodyParser.json());
 
@@ -30,6 +29,10 @@ router.route('/')
 })
 
 router.post('/signup', (req, res, next) => {
+
+      /*#swagger.tags = ['Users']
+        #swagger.description = 'Registra usuário'
+      */
     User.register(new User({username: req.body.username}), req.body.password, 
     (err, user) => {
         if(err) {
@@ -44,19 +47,56 @@ router.post('/signup', (req, res, next) => {
                 res.json({success: true, status: 'Registration Successful!'});
             });
         }
+        /* #swagger.responses[200] = { 
+            schema: { $ref: "#/definitions/SignUp" },
+            description: 'Registrado com sucesso.' 
+        }
+        #swagger.responses[500] = { 
+            schema: { $ref: "#/definitions/SignUpErro" },
+            description: 'O usuário já está cadastrado.' 
+        }
+    */
     });
 });
   
   router.post('/login', passport.authenticate('local'), (req, res) => {
     
+    /* 	#swagger.tags = ['Users']
+        #swagger.description = 'Loga usuário' 
+        #swagger.parameters['obj'] = {
+            in: 'body',
+            type: "object",
+            schema: {$ref: "#/definitions/Login"}
+        }
+    */
+
     var token = authenticate.getToken({_id: req.user._id});
     res.statusCode = 200;
     res.setHeader('Content-Type', 'application/json');
     nome = req.user.username
     res.json({id: req.user._id, token: token, status: 'You are successfully logged in!', name : req.user.username});
+    
+    /* #swagger.responses[200] = { 
+            schema: { $ref: "#/definitions/LoginResposta" },
+            description: 'Logado com sucesso.' 
+        }
+        #swagger.responses[401] = { 
+            description: 'Erro na autenticação.' 
+        } 
+    */
+  
   });
   
   router.get('/logout', (req, res, next) => {
+
+    /* 	#swagger.tags = ['Users']
+        #swagger.description = 'Desloga usuário'
+        #swagger.parameters['obj'] = {
+            in: 'body',
+            type: "object",
+            schema: {$ref: "#/definitions/Logout"} 
+        }
+    */
     if (req.session) {
       req.session.destroy();
       res.clearCookie('session-id');
@@ -67,6 +107,10 @@ router.post('/signup', (req, res, next) => {
       err.status = 403;
       next(err);
     }
+    /*  #swagger.responses[200] = {
+            description: 'Deslogado com sucesso.' 
+        }
+    */
   });
 
   
